# obs-chatbot

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  llm_config.py  main.py
backend/agents/: obs_agent.py
backend/collector/: macos_collector.py  mcp_tools.py  metrics_store.py
backend/tools/: obs_tools.py
frontend/: .env.example  Dockerfile.frontend  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/components/: ChatWindow.tsx  CollectorConfigPanel.tsx  LLMConfigPanel.tsx
frontend/src/hooks/: useChat.ts  useSpeechRecognition.ts
mock-obs/: Dockerfile  main.py
teams_bot/: bot.py
tests/unit/: test_chatbot.py
