[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obs-chatbot"
version = "1.0.0"
description = "Chatbot d'observabilité — Ollama + LangChain + obs-platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # LangChain + Ollama
    "langchain>=0.3.0,<0.4",
    "langchain-community>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "ollama>=0.4.0",
    # HTTP
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    # Teams Bot Framework
    "botbuilder-core>=4.15.0",
    "botbuilder-integration-aiohttp>=4.15.0",
    "botframework-connector>=4.15.0",
    # Utilitaires
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "teams_bot*"]
